# strpaint

./: .gitignore  LICENSE  MARK.json  README.txt  TRIGGER.json  pyproject.toml
docs/: strscan.docx
docs/obsolete/: strpaint.txt  strscan.txt
notes/: wishlist.txt
src/strpaint/: __init__.py  strpaint.py  strscan.py
src/strpaint.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_basics.py  test_strscan.py
